# scronify

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.h.in  icons.qrc  todo.md
.github/workflows/: ci.yml
include/scronify/: action.h  action_widget.h  display_event.h  event.h  output_connection.h  screen_handler.h  split_command.h  wayland_event.h  x11_event.h
src/: action_widget.cpp  display_event.cpp  event.cpp  main.cpp  screen_handler.cpp  split_command.cpp  wayland_event.cpp  x11_event.cpp
